Date	Added
12/29
	* Some code cleanup in prep for new debugging malloc (SVN 861) [MouseJstr]
        * Updated Soul Breaker's damage calculation [celest]
        * Updated Meteor Assault's cast delay to be not affected by dex [celest]
        * Changed int_guild.c so it will calculate average guild level only if > 0
          members are found - prevent divide by zero crashes (why would an empty guild
          be requested to update its' member info in the first place?) [celest]
        * Added Shinomori's fixes for string copying in script.c [celest]
	* Removed @giveitem since #item it's the one that does this and added some of it's support to #item [MC Cameri]
	  -#item <item_name> <item_count> <charname|all|everyone>
	* Uncommented out import in charcommand_athena.conf, there is
          need to have it commented (all the others ones are
          uncommented) [Ajarn]

12/28
        * When restarting the char-server,  reset the online status
          of all characters and guild-members (SVN 849) [MouseJstr]
	* Fix double timer_delete caused by pc_alive_timer (SVN 848)
	  [MouseJstr]
	* Fixed typo in npcs_athena.conf (mc_cameri verses mc_Cameri),
	  thanks Mellow972 for pointing that out (SVN 845) [MouseJstr]
        * Reduced weapon breaking chance for Overthrust, thanks Draco - i almost
          forgot to add this update [celest]
	* added checks into the skill code to prevent proxy's/bots
	  from crashing the server by using skillid's that
	  are WAY out of range (SVN 841) [MouseJstr]
	* Fixed clif.c errors that prevent old clients from being used. [nsstrunks]
	* Fixed @jobchange to not default to upper (SVN 837) [MouseJstr]
	* Fixed a compile error in @mobsearch (SVN 836) [MouseJstr]
12/27
        * Updated 1206's packet fuctions in clif.c [celest]
        * Updated the new guild skills - cannot be reused within 5 minutes of 
          activating it [celest]
        * Added @mobsearch, @cleanmap and @giveitem from jA [celest]